--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,7 +43,7 @@
     @apply bg-card rounded-lg card-shadow
   }
   .contact-styling{
-    @apply rounded px-2 py-1 focus:no-underline bg-white bg-opacity-25 focus:outline-none
+    @apply rounded px-2 py-1 focus:no-underline bg-white bg-opacity-25 focus:outline-none shadow-[0px_3px_10px_rgb(0,0,0,0.2)]
   }
 }
 
